#
# Install, and make if needed, prboom.wad
#

noinst_PROGRAMS = rdatawad
rdatawad_SOURCES = rd_main.c
rdatawad_SOURCES += rd_util.c rd_util.h
rdatawad_SOURCES += rd_output.c rd_output.h
rdatawad_SOURCES += rd_sound.c rd_sound.h
rdatawad_SOURCES += rd_palette.c rd_palette.h
rdatawad_SOURCES += rd_graphic.c rd_graphic.h

waddir=$(DOOMWADDIR)
wad_DATA=prboom.wad

PALETTE = palette.rgb

LUMPS = lumps/switches.lmp
LUMPS += lumps/animated.lmp
LUMPS += lumps/crbrick.lmp
LUMPS += lumps/crtan.lmp
LUMPS += lumps/crgray.lmp
LUMPS += lumps/crgreen.lmp
LUMPS += lumps/crbrown.lmp
LUMPS += lumps/crgold.lmp
LUMPS += lumps/crred.lmp
LUMPS += lumps/crblue.lmp
LUMPS += lumps/crblue2.lmp
LUMPS += lumps/crorange.lmp
LUMPS += lumps/cryellow.lmp

COLORMAPS = lumps/watermap.lmp

TABLES = lumps/sinetabl.lmp
TABLES += lumps/tangtabl.lmp
TABLES += lumps/tantoang.lmp
TABLES += lumps/gammatbl.lmp

SOUNDS = sounds/dsdgsit.wav
SOUNDS += sounds/dsdgatk.wav
SOUNDS += sounds/dsdgact.wav
SOUNDS += sounds/dsdgdth.wav
SOUNDS += sounds/dsdgpain.wav

GRAPHICS = graphics/dig0.ppm
GRAPHICS += graphics/dig1.ppm
GRAPHICS += graphics/dig2.ppm
GRAPHICS += graphics/dig3.ppm
GRAPHICS += graphics/dig4.ppm
GRAPHICS += graphics/dig5.ppm
GRAPHICS += graphics/dig6.ppm
GRAPHICS += graphics/dig7.ppm
GRAPHICS += graphics/dig8.ppm
GRAPHICS += graphics/dig9.ppm
GRAPHICS += graphics/diga.ppm
GRAPHICS += graphics/digb.ppm
GRAPHICS += graphics/digc.ppm
GRAPHICS += graphics/digd.ppm
GRAPHICS += graphics/dige.ppm
GRAPHICS += graphics/digf.ppm
GRAPHICS += graphics/digg.ppm
GRAPHICS += graphics/digh.ppm
GRAPHICS += graphics/digi.ppm
GRAPHICS += graphics/digj.ppm
GRAPHICS += graphics/digk.ppm
GRAPHICS += graphics/digl.ppm
GRAPHICS += graphics/digm.ppm
GRAPHICS += graphics/dign.ppm
GRAPHICS += graphics/digo.ppm
GRAPHICS += graphics/digp.ppm
GRAPHICS += graphics/digq.ppm
GRAPHICS += graphics/digr.ppm
GRAPHICS += graphics/digs.ppm
GRAPHICS += graphics/digt.ppm
GRAPHICS += graphics/digu.ppm
GRAPHICS += graphics/digv.ppm
GRAPHICS += graphics/digw.ppm
GRAPHICS += graphics/digx.ppm
GRAPHICS += graphics/digy.ppm
GRAPHICS += graphics/digz.ppm
GRAPHICS += graphics/dig45.ppm
GRAPHICS += graphics/dig47.ppm
GRAPHICS += graphics/dig58.ppm
GRAPHICS += graphics/dig91.ppm
GRAPHICS += graphics/dig93.ppm
GRAPHICS += graphics/stbr123.ppm
GRAPHICS += graphics/stbr124.ppm
GRAPHICS += graphics/stbr125.ppm
GRAPHICS += graphics/stbr126.ppm
GRAPHICS += graphics/stbr127.ppm
GRAPHICS += graphics/boxul.ppm
GRAPHICS += graphics/boxuc.ppm
GRAPHICS += graphics/boxur.ppm
GRAPHICS += graphics/boxcl.ppm
GRAPHICS += graphics/boxcc.ppm
GRAPHICS += graphics/boxcr.ppm
GRAPHICS += graphics/boxll.ppm
GRAPHICS += graphics/boxlc.ppm
GRAPHICS += graphics/boxlr.ppm
GRAPHICS += graphics/stkeys6.ppm
GRAPHICS += graphics/stkeys7.ppm
GRAPHICS += graphics/stkeys8.ppm
GRAPHICS += graphics/stcfn096.ppm
GRAPHICS += graphics/m_butt1.ppm
GRAPHICS += graphics/m_butt2.ppm
GRAPHICS += graphics/m_colors.ppm
GRAPHICS += graphics/m_palno.ppm
GRAPHICS += graphics/m_palsel.ppm
GRAPHICS += graphics/m_vbox.ppm
GRAPHICS += graphics/m_generl.ppm
GRAPHICS += graphics/m_setup.ppm
GRAPHICS += graphics/m_auto.ppm
GRAPHICS += graphics/m_keybnd.ppm
GRAPHICS += graphics/m_chat.ppm
GRAPHICS += graphics/m_compat.ppm
GRAPHICS += graphics/m_enem.ppm
GRAPHICS += graphics/m_mess.ppm
GRAPHICS += graphics/m_stat.ppm
GRAPHICS += graphics/m_weap.ppm
GRAPHICS += graphics/m_horsen.ppm
GRAPHICS += graphics/m_versen.ppm
GRAPHICS += graphics/prboom.ppm

SPRITES = sprites/tnt1a0.ppm
SPRITEP = 0,0,sprites/tnt1a0.ppm
SPRITES += sprites/dogsa1.ppm
SPRITEP += 10,30,sprites/dogsa1.ppm
SPRITES += sprites/dogsa2a8.ppm
SPRITEP += 14,29,sprites/dogsa2a8.ppm
SPRITES += sprites/dogsa3a7.ppm
SPRITEP += 15,29,sprites/dogsa3a7.ppm
SPRITES += sprites/dogsa4a6.ppm
SPRITEP += 12,29,sprites/dogsa4a6.ppm
SPRITES += sprites/dogsa5.ppm
SPRITEP += 10,30,sprites/dogsa5.ppm
SPRITES += sprites/dogsb1.ppm
SPRITEP += 9,30,sprites/dogsb1.ppm
SPRITES += sprites/dogsb2b8.ppm
SPRITEP += 13,29,sprites/dogsb2b8.ppm
SPRITES += sprites/dogsb3b7.ppm
SPRITEP += 14,29,sprites/dogsb3b7.ppm
SPRITES += sprites/dogsb4b6.ppm
SPRITEP += 12,29,sprites/dogsb4b6.ppm
SPRITES += sprites/dogsb5.ppm
SPRITEP += 9,29,sprites/dogsb5.ppm
SPRITES += sprites/dogsc1.ppm
SPRITEP += 10,30,sprites/dogsc1.ppm
SPRITES += sprites/dogsc2c8.ppm
SPRITEP += 11,29,sprites/dogsc2c8.ppm
SPRITES += sprites/dogsc3c7.ppm
SPRITEP += 14,29,sprites/dogsc3c7.ppm
SPRITES += sprites/dogsc4c6.ppm
SPRITEP += 12,29,sprites/dogsc4c6.ppm
SPRITES += sprites/dogsc5.ppm
SPRITEP += 10,30,sprites/dogsc5.ppm
SPRITES += sprites/dogsd1.ppm
SPRITEP += 10,30,sprites/dogsd1.ppm
SPRITES += sprites/dogsd2d8.ppm
SPRITEP += 12,29,sprites/dogsd2d8.ppm
SPRITES += sprites/dogsd3d7.ppm
SPRITEP += 14,29,sprites/dogsd3d7.ppm
SPRITES += sprites/dogsd4d6.ppm
SPRITEP += 13,29,sprites/dogsd4d6.ppm
SPRITES += sprites/dogsd5.ppm
SPRITEP += 9,29,sprites/dogsd5.ppm
SPRITES += sprites/dogse1.ppm
SPRITEP += 10,30,sprites/dogse1.ppm
SPRITES += sprites/dogse2.ppm
SPRITEP += 14,29,sprites/dogse2.ppm
SPRITES += sprites/dogse3.ppm
SPRITEP += 14,29,sprites/dogse3.ppm
SPRITES += sprites/dogse4.ppm
SPRITEP += 13,29,sprites/dogse4.ppm
SPRITES += sprites/dogse5.ppm
SPRITEP += 9,29,sprites/dogse5.ppm
SPRITES += sprites/dogse6.ppm
SPRITEP += 13,29,sprites/dogse6.ppm
SPRITES += sprites/dogse7.ppm
SPRITEP += 14,29,sprites/dogse7.ppm
SPRITES += sprites/dogse8.ppm
SPRITEP += 14,29,sprites/dogse8.ppm
SPRITES += sprites/dogsf1.ppm
SPRITEP += 10,30,sprites/dogsf1.ppm
SPRITES += sprites/dogsf2.ppm
SPRITEP += 13,29,sprites/dogsf2.ppm
SPRITES += sprites/dogsf3.ppm
SPRITEP += 16,29,sprites/dogsf3.ppm
SPRITES += sprites/dogsf4.ppm
SPRITEP += 13,29,sprites/dogsf4.ppm
SPRITES += sprites/dogsf5.ppm
SPRITEP += 9,28,sprites/dogsf5.ppm
SPRITES += sprites/dogsf6.ppm
SPRITEP += 13,29,sprites/dogsf6.ppm
SPRITES += sprites/dogsf7.ppm
SPRITEP += 16,29,sprites/dogsf7.ppm
SPRITES += sprites/dogsf8.ppm
SPRITEP += 13,29,sprites/dogsf8.ppm
SPRITES += sprites/dogsg1.ppm
SPRITEP += 9,30,sprites/dogsg1.ppm
SPRITES += sprites/dogsg2.ppm
SPRITEP += 12,29,sprites/dogsg2.ppm
SPRITES += sprites/dogsg3.ppm
SPRITEP += 13,29,sprites/dogsg3.ppm
SPRITES += sprites/dogsg4.ppm
SPRITEP += 11,29,sprites/dogsg4.ppm
SPRITES += sprites/dogsg5.ppm
SPRITEP += 8,28,sprites/dogsg5.ppm
SPRITES += sprites/dogsg6.ppm
SPRITEP += 11,29,sprites/dogsg6.ppm
SPRITES += sprites/dogsg7.ppm
SPRITEP += 13,29,sprites/dogsg7.ppm
SPRITES += sprites/dogsg8.ppm
SPRITEP += 12,29,sprites/dogsg8.ppm
SPRITES += sprites/dogsh1.ppm
SPRITEP += 9,25,sprites/dogsh1.ppm
SPRITES += sprites/dogsh2.ppm
SPRITEP += 10,26,sprites/dogsh2.ppm
SPRITES += sprites/dogsh3.ppm
SPRITEP += 11,26,sprites/dogsh3.ppm
SPRITES += sprites/dogsh4.ppm
SPRITEP += 11,26,sprites/dogsh4.ppm
SPRITES += sprites/dogsh5.ppm
SPRITEP += 9,26,sprites/dogsh5.ppm
SPRITES += sprites/dogsh6.ppm
SPRITEP += 11,26,sprites/dogsh6.ppm
SPRITES += sprites/dogsh7.ppm
SPRITEP += 11,26,sprites/dogsh7.ppm
SPRITES += sprites/dogsh8.ppm
SPRITEP += 10,26,sprites/dogsh8.ppm
SPRITES += sprites/dogsi0.ppm
SPRITEP += 10,30,sprites/dogsi0.ppm
SPRITES += sprites/dogsj0.ppm
SPRITEP += 10,30,sprites/dogsj0.ppm
SPRITES += sprites/dogsk0.ppm
SPRITEP += 11,27,sprites/dogsk0.ppm
SPRITES += sprites/dogsl0.ppm
SPRITEP += 11,20,sprites/dogsl0.ppm
SPRITES += sprites/dogsm0.ppm
SPRITEP += 12,15,sprites/dogsm0.ppm
SPRITES += sprites/dogsn0.ppm
SPRITEP += 13,15,sprites/dogsn0.ppm

WAD_SRC = $(PALETTE) $(LUMPS) $(COLORMAPS) $(TABLES) \
          $(SOUNDS) $(GRAPHICS) $(SPRITES)

WAD_CMDLINE = -palette $(PALETTE)
WAD_CMDLINE += -lumps $(LUMPS)
WAD_CMDLINE += -marker C_START -lumps $(COLORMAPS) -marker C_END
WAD_CMDLINE += -marker B_START -lumps $(TABLES) -marker B_END
WAD_CMDLINE += -sounds $(SOUNDS)
WAD_CMDLINE += -graphics $(GRAPHICS)
WAD_CMDLINE += -marker SS_START -sprites $(SPRITEP) -marker SS_END

prboom.wad : rdatawad $(WAD_SRC)
	${AM_V_GEN}./rdatawad -I $(srcdir) $(WAD_CMDLINE) -o $@

EXTRA_DIST=$(WAD_SRC)
CLEANFILES=prboom.wad
